# solver

./: .gitignore  .solvers.cu.swp  .start.cu.swp  1.txt  2.txt  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  blas.c  blas.h  cg.c  cg.h  common.mk  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  cr.c  cr.h  cr_read_14.sh  gcr-cg.txt  gcr-cr.txt  gcr.h  hoge  innersolvers.c  innersolvers.h  io.c  io.h  k-4.txt  kcg_0.txt  kcg_2.txt  kskipcg.c  (+24 more)
CRS/: .gcr.cu.swp  .kskipcg.cu.swp  .kskipcr.cu.swp  cg.c  cg.cu  cg.h  cr.c  cr.cu  cr.h  gcr.c  gcr.cu  gcr.h  gmres.cu  gmres.cu_backup  gmres.h  gmres_backup.c  kskipcg.c  kskipcg.cu  kskipcg.h  kskipcr.c  kskipcr.cu  kskipcr.h  tags  vpcg.c  vpcg.cu  vpcg.h  vpcr.c  vpcr.cu  vpcr.h  vpgcr.c  vpgcr.cu  vpgcr.h  vpgmres.cu  vpgmres.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
backup/: vpcr.backup  vpcr.hbackup
bcsstk14/: ColVal.txt  Ptr.txt  bx.txt
functions/: .blas.cu.swp  .blas.h.swp  blas.c  blas.cu  blas.h  cudafunc.cu  cudafunc.cuh  cudafunc.h  io.c  io.cu  io.h  tags
gamma_25/: kcg_k1.txt  kcg_k2.txt  kcg_k3.txt  kcr_k1.txt  kcr_k2.txt  kcr_k3.txt
src/: Makefile  Makefile.am  Makefile.in  config.h  innersolvers.h  main.c  solver  solver.1  start.c  start.h
src/.deps/: blas.Po  cg.Po  cr.Po  gcr.Po  innersolvers.Po  io.Po  kskipcg.Po  kskipcr.Po  main.Po  solvers.Po  start.Po  vpcg.Po  vpcr.Po  vpgcr.Po
src/CRS/: cg.h  cr.h  gcr.h  kskipcr.c  kskipcr.h  vpcg.c  vpcg.h  vpcr.c  vpgcr.c
src/functions/: blas.h  io.c
(+32 files in other folders)
