include $(top_srcdir)/common.mk

bin_PROGRAMS=solver
solver_SOURCES=./innersolvers.c ./main.c ./solvers.c ./start.c ./CRS/cg.c ./CRS/cr.c ./CRS/gcr.c ./CRS/kskipcg.c ./CRS/kskipcr.c ./CRS/vpcg.c ./CRS/vpcr.c ./CRS/vpgcr.c ./functions/blas.c ./functions/io.c ./innersolvers.h ./solvers.h ./start.h ./CRS/cg.h ./CRS/cr.h ./CRS/gcr.h ./CRS/kskipcg.h ./CRS/kskipcr.h ./CRS/vpcg.h ./CRS/vpcr.h ./CRS/vpgcr.h ./functions/blas.h ./functions/io.h ../bcsstk14/ColVal.txt ../bcsstk14/Ptr.txt ../bcsstk14/bx.txt
dist_man_MANS=solver.1
